playlist section complete

--- a/beatz/beatz/index.html
+++ b/beatz/beatz/index.html
@@ -676,7 +676,7 @@
 
         <div id="jp_container_1" class="jp-audio fixed-player" role="application" aria-label="media player">
             <div class="jp-type-playlist">
-                <div class="jp-gui jp-interface play-list-style align-items-center">
+                <div class="jp-gui jp-interface play-list-style">
                     <div class="album-img">
                         <img src="images/resources/album-img.jpg" alt="">
                     </div><!--album-img end-->
@@ -731,7 +731,6 @@
                                         </div>
                                     </div>
                                     <div class="jp-playlist">
-                                        <h3>Episodes</h3>
                                         <ul>
                                             <li>&nbsp;</li>
                                         </ul>
@@ -746,7 +745,6 @@
                     </div>
                 </div>
                 <div class="jp-playlist">
-                    <h3>Episodes</h3>
                     <ul>
                         <li>&nbsp;</li>
                     </ul>
